#Changes in Frinex 1.4

Tweaked the local notifications so that they are requested in reverse date and reverse time order, so that if any are rejected by the device the most immediate notifications will be preserved.

Added evaluateMs to addFrameTimeTrigger and addMediaTrigger. Added a sub elements of onTime and onError to addFrameTimeTrigger and addMediaTrigger. Added an error threshold ms attribute to all time critical triggers.

Added an example of formatting the current time and date with various formatting options: 
    with_stimulus_example/#Format_Current_DateTime

Updated the various DTMF examples:
    with_stimulus_example/RecorderDtmfTriggerExample
    with_stimulus_example/#RecordingDTMFExtendedTest
    with_stimulus_example/#RecordingDTMFQualityTest

Updated the audio recorder noise cancelation example:
    with_stimulus_example/#RecorderNoiseEchoGainTest

Updated the example of keeping a list of unique dates:
    with_stimulus_example/#append_unique_date

Updated the "Download Zipped Audio" on the admin menu page to explicitly have whitespace between each item.

Reorganised the audio recorder examples in with_stimulus_example so that they are all in one group (the examples are all still there, just in a different order).

Added more documentation for various existing features: backgroundImage, disableButtonGroup, enableButtonGroup, hideButtonGroup, showButtonGroup, playMedia, rewindMedia, pauseMedia, logMediaTimeStamp, startAudioRecorderWeb, 

The following features have been added:

    startFrameRateTimer
    Adds a trigger to the containing frame timer. When the timer has a value equal or greater than the specified milliseconds this trigger. Only one trigger per millisecond value can be assigned.

    addFrameTimeTrigger
    Starts a timer that evaluates its triggers before each frame is rendered in the browser. The resolution of these triggering events will be no less that the framerate, but the actual time resolution is browser dependant.
