@@ -254,7 +254,7 @@ public enum FeatureType {
     VideoPanel(false, new FeatureAttribute[]{src, percentOfPage, maxHeight, maxWidth, poster}, false, false, false, Contitionals.none, Contitionals.stimulusAction),
     AnnotationTimelinePanel(false, new FeatureAttribute[]{src, poster, eventTag, columnCount, maxStimuli}, false, false, false, Contitionals.any, Contitionals.stimulusAction),
     audioInputSelectWeb(false, new FeatureAttribute[]{deviceRegex, styleName}, "Shows a select box of the available audio input devices for use with startAudioRecorderWeb. When an device is selected it will be used as the first preference when the next recording is made.", Contitionals.hasErrorSuccess, Contitionals.none),
-    startAudioRecorderWeb(true, new FeatureAttribute[]{downloadPermittedWindowMs, deviceRegex, mediaId, recordingFormat, levelIndicatorStyle, echoCancellation, noiseSuppression, autoGainControl}, "Starts the HTML5 audio recorder which will send the recorded audio to the admin database. If downloadPermittedWindowMs is a positive number then the uploaded audio can be downloaded from the server for playback within that period of time for user verification, otherwise playback will not be possible. The onError will be triggered if the recorder cannot start. If the upload or playback fails then mediaLoadFailed will be triggered. Upload failure will also result in a subsequent upload attempt. When the recorded audio data has been submitted the mediaLoaded will be triggered even if playback is not enabled by downloadPermittedWindowMs, this allows upload verification before proceeding. The featureText is shown in the recording label. When the featureText is 00:00:00 the recording time will be shown in the recording label. The name of the audio input device used for the recording will be stored in the admin system. If the levelIndicatorStyle is set then a recording level indicator will be shown. If levelIndicatorStyle is set and a region with the ID of AudioRecorderWebLevelIndicator exists then that region will be used to position the recording level indicator.", Contitionals.hasMediaRecorderPlayback, Contitionals.stimulusAction),
+    startAudioRecorderWeb(true, new FeatureAttribute[]{downloadPermittedWindowMs, deviceRegex, mediaId, recordingFormat, levelIndicatorStyle, echoCancellation, noiseSuppression, autoGainControl}, "Starts the HTML5 audio recorder which will send the recorded audio to the admin database. If downloadPermittedWindowMs is a positive number then the uploaded audio can be downloaded from the server for playback within that period of time for user verification, otherwise playback will not be possible. The onError will be triggered if the recorder cannot start. If the upload or playback fails then mediaLoadFailed will be triggered. Upload failure will also result in a subsequent upload attempt. When the recorded audio data has been submitted the mediaLoaded will be triggered even if playback is not enabled by downloadPermittedWindowMs, this allows upload verification before proceeding. The featureText is shown in the recording label. When the featureText is 00:00:00 the recording time will be shown in the recording label. When the featureText is &quot;hidden&quot; the recording label will not be shown (never record without explicit consent). The name of the audio input device used for the recording will be stored in the admin system. If the levelIndicatorStyle is set then a recording level indicator will be shown. If levelIndicatorStyle is set and a region with the ID of AudioRecorderWebLevelIndicator exists then that region will be used to position the recording level indicator.", Contitionals.hasMediaRecorderPlayback, Contitionals.stimulusAction),
     startAudioRecorderApp(false, new FeatureAttribute[]{filePerStimulus, eventTag, fieldName}, "Starts the Android wav recorder, the recorded wav files will be saved on the device in a sub directories based on value of the provided metadata field and the eventTag.", Contitionals.hasErrorSuccess, Contitionals.stimulusAction),
     stopAudioRecorder(false, new FeatureAttribute[]{}, false, false, false, Contitionals.none, Contitionals.stimulusAction, Contitionals.isTimeCritical),
     //    stopAudioRecorder(false, false, new FeatureAttribute[]{minimum, maximum, average}, false, false, false, Contitionals.hasThreshold, Contitionals.stimulusAction),
